--- a/Modulo 4/Exercícios/ex024/iframe002.html
+++ b/Modulo 4/Exercícios/ex024/iframe002.html
@@ -20,7 +20,9 @@
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis nihil perspiciatis cum laborum iste maxime perferendis mollitia. Odio ratione numquam corrupti aliquid rerum, dicta atque, iure architecto commodi esse quisquam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate commodi inventore ducimus voluptas accusamus, repudiandae tempora eaque vero incidunt eveniet illo. Aut cupiditate, fugiat explicabo minima dolorem labore rerum dolor.</p>
 
-    <iframe src="pag001.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="paginas-extras/pag001.html" frameborder="0" height="500" width="500">
+        <p>Infelizmente seu navegador não é compatível com isso!!</p>
+    </iframe>
 
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis magni, earum, provident tempora adipisci cupiditate obcaecati voluptatem hic dolorem saepe suscipit ad necessitatibus rerum quaerat fuga distinctio omnis maxime optio. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente excepturi non aliquam blanditiis laborum illo sint exercitationem! Asperiores, ex, quia impedit reprehenderit accusantium, suscipit aspernatur at unde vero temporibus dicta!</p>
 </body>
