utilizando iframe estático

--- a/Modulo 4/Exercícios/ex024/iframe003.html
+++ b/Modulo 4/Exercícios/ex024/iframe003.html
@@ -28,7 +28,7 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi rerum optio deserunt neque est placeat praesentium aliquid ex alias. Eligendi, dicta. Repellendus debitis molestias veritatis voluptatem reprehenderit nostrum culpa libero! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam doloremque earum beatae, officiis, iste voluptate fugiat recusandae est porro quibusdam quidem laudantium animi explicabo ea, dicta nesciunt quos incidunt perferendis?</p>
 
-    <iframe id="tela" name="frame" src="" >
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi rerum optio deserunt neque est placeat praesentium aliquid ex alias. Eligendi, dicta. Repellendus debitis molestias veritatis voluptatem reprehenderit nostrum culpa libero! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam doloremque earum beatae, officiis, iste voluptate fugiat recusandae est porro quibusdam quidem laudantium animi explicabo ea, dicta nesciunt quos incidunt perferendis?</p></br><img src='imagens/cursoemvideo-logo.png'>" >
         <p>Infelizmente seu navegador não é compatível com isso.</p>
     </iframe>
 </body>
